# 6-template

./: CMakeLists.txt  README.md
.github/: mergify.yml
.github/workflows/: test.yml
cmake/Modules/: AddCMockaTest.cmake  AddMockedTest.cmake
script/: build.sh  test.sh
src/: CMakeLists.txt  sortings.h
test/: 5_string_inp_asc.txt  5_string_inp_des.txt  CMakeLists.txt  test_main.c
